Modify repo name

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/seabornlee/cards.git"
+    "url": "https://github.com/seabornlee/life.git"
   },
   "author": {
     "name": "Seaborn",
