--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@astrojs/react": "^1.1.4",
     "@astrojs/tailwind": "^2.0.1",
     "@tailwindcss/typography": "^0.5.7",
-    "@types/lozad": "^1.16.1"
+    "@types/lozad": "^1.16.1",
+    "fs-extra": "^10.1.0"
   }
 }
